--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+  <meta charset="UTF-8">
   <title>Login - Hidrômetro</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +15,6 @@
     </form>
     <p id="login-error" class="error"></p>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
