--- a/dashboard.html
+++ b/dashboard.html
@@ -1,30 +1,23 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-  <title>Dashboard - Leitura</title>
+  <meta charset="UTF-8">
+  <title>Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Leitura de Hidrômetro</h1>
-  <form id="leitura-form">
-    <input type="text" id="unidade" placeholder="Unidade" required>
-    <input type="date" id="data" required>
-    <input type="number" id="valor" placeholder="Valor do Hidrômetro" required>
-    <button type="submit">Registrar</button>
-  </form>
 
-  <h2>Histórico</h2>
-  <table id="historico">
-    <thead>
-      <tr>
-        <th>Unidade</th>
-        <th>Data</th>
-        <th>Valor</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <button onclick="criarBloco()">+ Adicionar Bloco</button>
+
+  <div>
+    <label for="blocoSelect">Selecionar Bloco</label>
+    <select id="blocoSelect" onchange="carregarBloco()">
+      <option value="">Selecione um bloco</option>
+    </select>
+  </div>
+
+  <div id="tabela-container"></div>
 
   <script src="script.js"></script>
 </body>
