--- a/dashboard.html
+++ b/dashboard.html
@@ -2,18 +2,18 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Leitura de Hidrômetro</title>
+  <title>Blocos - Hidrômetro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Leitura de Hidrômetro</h1>
+  <h1>Blocos Cadastrados</h1>
 
   <button onclick="criarBloco()">+ Adicionar Bloco</button>
   <button onclick="gerenciarBlocos()">⚙️ Gerenciar Blocos</button>
 
   <div id="blocos-container"></div>
 
-  <!-- Modal de gerenciamento -->
+  <!-- Modal -->
   <div id="modal-blocos" class="modal" style="display:none;">
     <div class="modal-content">
       <span class="close" onclick="fecharModal()">&times;</span>
