--- a/bloco.html
+++ b/bloco.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Bloco - Leitura</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="bloco-detalhes"></div>
+  <script src="script.js"></script>
+</body>
+</html>
 
