--- a/bloco.html
+++ b/bloco.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Bloco - Leitura</title>
+  <title>Leituras do Bloco</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,4 +10,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
