--- a/bloco.html
+++ b/bloco.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <title>Leituras do Bloco</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .voltar {
+      background: #6c757d;
+      color: white;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+    .voltar:hover {
+      background: #5a6268;
+    }
+  </style>
 </head>
 <body>
+  <button class="voltar" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
+
   <div id="bloco-detalhes"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
