--- a/bloco.html
+++ b/bloco.html
@@ -24,6 +24,8 @@
 
   <div id="bloco-detalhes"></div>
 
-  <script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
