--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
   <button onclick="criarBloco()">+ Adicionar Bloco</button>
 
 <button onclick="exportarDados()">💾 Exportar Dados</button>
-<input type="file" id="importar-arquivo" style="display:none" onchange="importarDados(event)">
+<input type="file" id="importar-arquivo" style="display:none" accept=".json,application/json,*/*" onchange="importarDados(event)">
 <button onclick="document.getElementById('importar-arquivo').click()">📥 Importar Dados</button>
 
   
@@ -20,5 +20,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
