--- a/bloco.html
+++ b/bloco.html
@@ -22,6 +22,8 @@
 <body>
   <button class="voltar" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
 
+  <button onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
+
   <div id="bloco-detalhes"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
