--- a/bloco.html
+++ b/bloco.html
@@ -25,7 +25,8 @@
   <button onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
 
   <div id="bloco-detalhes"></div>
-
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script src="script.js"></script>
 
