--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,16 @@
     button {
       margin-right: 10px;
     }
+      .input-curto {
+    width: 100px;
+    padding: 4px;
+    font-size: 14px;
+  }
+
+  label {
+    display: inline-block;
+    margin-bottom: 8px;
+  }
   </style>
 </head>
 <body>
@@ -48,4 +58,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
