--- a/dashboard.html
+++ b/dashboard.html
@@ -4,42 +4,9 @@
   <meta charset="UTF-8">
   <title>Dashboard - Hidrômetro</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-
-    button {
-      margin: 5px 5px 15px 0;
-      padding: 8px 12px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    label {
-      display: inline-block;
-      margin-bottom: 8px;
-    }
-
-    .input-curto {
-      width: 100px;
-      padding: 4px;
-      font-size: 14px;
-      margin-left: 10px;
-    }
-
-    h1, h2 {
-      margin-bottom: 10px;
-    }
-
-    hr {
-      margin: 30px 0;
-    }
-  </style>
 </head>
 <body>
+  <script> if (localStorage.getItem("logado") !== "true") location.href = "index.html"; </script>
 
   <h1>Blocos Cadastrados</h1>
 
@@ -54,22 +21,15 @@
   <hr>
 
   <h2>Configurações de Tarifa 💧</h2>
-
   <form id="form-tarifa">
-    <label>
-      Tarifa mínima (até 10 m³):
-      <input type="number" step="0.01" id="tarifa-minimo" class="input-curto">
-    </label><br><br>
+    <label for="tarifa-minimo">Tarifa mínima (até 10 m³):</label>
+    <input type="number" step="0.01" id="tarifa-minimo" class="input-curto">
 
-    <label>
-      Tarifa por m³ de 11 a 20:
-      <input type="number" step="0.01" id="tarifa-11-20" class="input-curto">
-    </label><br><br>
+    <label for="tarifa-11-20">Tarifa por m³ de 11 a 20:</label>
+    <input type="number" step="0.01" id="tarifa-11-20" class="input-curto">
 
-    <label>
-      Tarifa por m³ acima de 20:
-      <input type="number" step="0.01" id="tarifa-21-50" class="input-curto">
-    </label><br><br>
+    <label for="tarifa-21-50">Tarifa por m³ acima de 20:</label>
+    <input type="number" step="0.01" id="tarifa-21-50" class="input-curto">
 
     <button type="button" onclick="salvarConfiguracoesTarifa()">💾 Salvar Tarifas</button>
   </form>
