--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Login - Hidrômetro</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Login - Leitura de Hidrômetro</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <div class="login-container">
     <h2>Login</h2>
     <form id="login-form">
-      <input type="text" id="username" placeholder="Usuário" required>
-      <input type="password" id="password" placeholder="Senha" required>
+      <input type="text" id="username" placeholder="Usuário" autocomplete="username" required />
+      <input type="password" id="password" placeholder="Senha" autocomplete="current-password" required />
       <button type="submit">Entrar</button>
     </form>
     <p id="login-error" class="error" aria-live="polite"></p>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
