--- a/dashboard.html
+++ b/dashboard.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Dashboard - Hidrômetro</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Dashboard - Leitura de Hidrômetro</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <script> if (localStorage.getItem("logado") !== "true") location.href = "index.html"; </script>
+  <!-- Proteção de rota -->
+  <script>
+    if (localStorage.getItem("logado") !== "true") location.href = "index.html";
+  </script>
 
-  <h1>Blocos Cadastrados</h1>
-
-  <button onclick="criarBloco()">+ Adicionar Bloco</button>
-  <button onclick="exportarDados()">💾 Exportar Dados</button>
-
-  <input type="file" id="importar-arquivo" style="display:none" accept=".json,application/json,*/*" onchange="importarDados(event)">
-  <button onclick="document.getElementById('importar-arquivo').click()">📥 Importar Dados</button>
+  <header class="topbar">
+    <h1>Blocos Cadastrados</h1>
+    <div class="topbar-actions">
+      <button type="button" onclick="criarBloco()">+ Adicionar Bloco</button>
+      <button type="button" onclick="exportarDados()">💾 Exportar Dados</button>
+      <input type="file" id="importar-arquivo" accept=".json,application/json" style="display:none" onchange="importarDados(event)" />
+      <button type="button" onclick="document.getElementById('importar-arquivo').click()">📥 Importar Dados</button>
+      <button type="button" class="btn-danger" onclick="logout()">Sair</button>
+    </div>
+  </header>
 
   <div id="blocos-container"></div>
-
-  <hr>
-
-  <h2>Configurações de Tarifa 💧</h2>
-  <form id="form-tarifa">
-    <label for="tarifa-minimo">Tarifa mínima (até 10 m³):</label>
-    <input type="number" step="0.01" id="tarifa-minimo" class="input-curto">
-
-    <label for="tarifa-11-20">Tarifa por m³ de 11 a 20:</label>
-    <input type="number" step="0.01" id="tarifa-11-20" class="input-curto">
-
-    <label for="tarifa-21-50">Tarifa por m³ acima de 20:</label>
-    <input type="number" step="0.01" id="tarifa-21-50" class="input-curto">
-
-    <button type="button" onclick="salvarConfiguracoesTarifa()">💾 Salvar Tarifas</button>
-  </form>
 
   <script src="script.js"></script>
 </body>
