--- a/bloco.html
+++ b/bloco.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Leituras do Bloco</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <script> if (localStorage.getItem("logado") !== "true") location.href = "index.html"; </script>
+  <!-- Proteção de rota -->
+  <script>
+    if (localStorage.getItem("logado") !== "true") location.href = "index.html";
+  </script>
 
-  <button class="voltar" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
+  <div class="toolbar">
+    <button class="voltar" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
 
-  <h1>Leitura do Bloco</h1>
-
-  <div class="acoes">
-    <input type="file" id="importar-leitura-arquivo" style="display:none" accept=".xlsx" onchange="importarLeituraAtual(event)">
-    <button type="button" onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
-    <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual</button>
+    <div class="acoes">
+      <button type="button" onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
+      <input type="file" id="importar-leitura-arquivo" accept=".xlsx" style="display:none" onchange="importarLeituraAtual(event)" />
+      <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
+      <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
+    </div>
   </div>
 
   <div id="bloco-detalhes"></div>
 
-  <!-- XLSX Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <!-- Biblioteca XLSX (para exportar/importar planilhas) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" integrity="sha512-H7b7f1Nn6zK9v1q7lq0Qy3q4F9b6Hc1uFhY3m2xLQnxw6n5lx3QhKQ4Jkz6g4S3zYgQe4QW3wGIm4C2u7i7gWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="script.js"></script>
 </body>
 </html>
