--- a/bloco.html
+++ b/bloco.html
@@ -26,7 +26,7 @@
   <div id="bloco-detalhes"></div>
 
   <!-- Biblioteca XLSX (para exportar/importar planilhas) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" integrity="sha512-H7b7f1Nn6zK9v1q7lq0Qy3q4F9b6Hc1uFhY3m2xLQnxw6n5lx3QhKQ4Jkz6g4S3zYgQe4QW3wGIm4C2u7i7gWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
