--- a/bloco.html
+++ b/bloco.html
@@ -25,7 +25,7 @@
 
   <div id="bloco-detalhes"></div>
 
-  <!-- Biblioteca XLSX (para exportar/importar planilhas) -->
+  <!-- Biblioteca XLSX (SheetJS) -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
