--- a/bloco.html
+++ b/bloco.html
@@ -7,25 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <!-- Proteção de rota -->
-  <script>
-    if (localStorage.getItem("logado") !== "true") location.href = "index.html";
-  </script>
+  <script> if (localStorage.getItem("logado") !== "true") location.href = "index.html"; </script>
 
   <div class="toolbar">
     <button class="voltar" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
-
     <div class="acoes">
       <button type="button" onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
       <input type="file" id="importar-leitura-arquivo" accept=".xlsx" style="display:none" onchange="importarLeituraAtual(event)" />
       <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
+      <!-- NOVO: botão para boletos -->
+      <button type="button" onclick="location.href='boletos.html?id='+new URLSearchParams(location.search).get('id')">🧾 Boletos (imprimir)</button>
     </div>
   </div>
 
   <div id="bloco-detalhes"></div>
 
-  <!-- Biblioteca XLSX (SheetJS) -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
