--- a/bloco.html
+++ b/bloco.html
@@ -17,7 +17,11 @@
       <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
       <!-- NOVO: botão para boletos -->
-      <button type="button" onclick="location.href='boletos.html?id='+new URLSearchParams(location.search).get('id')">🧾 Boletos (imprimir)</button>
+      <button
+  type="button"
+  onclick="(function(){ const id=new URLSearchParams(location.search).get('id'); location.href='boletos.html?id='+encodeURIComponent(id||'0'); })()"
+>🧾 Boletos (imprimir)</button>
+
     </div>
   </div>
 
