--- a/boletos.html
+++ b/boletos.html
@@ -32,7 +32,12 @@
     <button onclick="window.print()">🖨️ Imprimir</button>
   </header>
 
-  <main id="boletos-root"></main>
+ <main id="boletos-root">
+  <div style="padding:20px;color:#555">
+    Carregando boletos… se esta mensagem não sumir, verifique se o arquivo <code>script.js</code> está sendo encontrado.
+  </div>
+</main>
+
 
   <script src="script.js"></script>
 </body>
