--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Login - Leitura de Hidrômetro</title>
+  <title>Login | Leitura de Hidrômetro</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -20,5 +20,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
