--- a/bloco.html
+++ b/bloco.html
@@ -7,24 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <!-- Proteção de rota -->
   <script>
     if (localStorage.getItem("logado") !== "true") location.href = "index.html";
   </script>
 
-  <!-- Barra superior -->
   <div class="toolbar">
     <button class="voltar" aria-label="Voltar para o painel" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
     <div class="acoes">
       <button type="button" onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
 
-      <input
-        type="file"
-        id="importar-leitura-arquivo"
-        accept=".xlsx"
-        style="display:none"
-        onchange="importarLeituraAtual(event)"
-      />
+      <input type="file" id="importar-leitura-arquivo" accept=".xlsx" style="display:none" onchange="importarLeituraAtual(event)" />
       <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
 
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
@@ -39,12 +31,8 @@
     </div>
   </div>
 
-  <!-- Conteúdo principal -->
-  <main id="bloco-detalhes" class="conteudo">
-    <!-- Renderizado via script.js -->
-  </main>
+  <main id="bloco-detalhes" class="conteudo"></main>
 
-  <!-- Bibliotecas -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
