--- a/bloco.html
+++ b/bloco.html
@@ -1,3 +1,10 @@
+<!-- 
+  Projeto: Leitura de Hidrômetro
+  Versão: v1.0.0
+  Data: 10/11/2025
+  Descrição: Página de leituras e tarifas do bloco.
+-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,19 +22,10 @@
     <button class="voltar" aria-label="Voltar para o painel" onclick="window.location.href='dashboard.html'">🔙 Voltar</button>
     <div class="acoes">
       <button type="button" onclick="exportarLeituraAtual()">📤 Exportar Leitura Atual</button>
-
       <input type="file" id="importar-leitura-arquivo" accept=".xlsx" style="display:none" onchange="importarLeituraAtual(event)" />
       <button type="button" onclick="document.getElementById('importar-leitura-arquivo').click()">📥 Importar Leitura Atual (XLSX)</button>
-
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
-
-      <button
-        type="button"
-        onclick="(function(){ 
-          const id=new URLSearchParams(location.search).get('id'); 
-          location.href='boletos.html?id='+encodeURIComponent(id||'0'); 
-        })()"
-      >🧾 Boletos (imprimir)</button>
+      <button type="button" onclick="(function(){ const id=new URLSearchParams(location.search).get('id'); location.href='boletos.html?id='+encodeURIComponent(id||'0'); })()">🧾 Boletos (imprimir)</button>
     </div>
   </div>
 
