--- a/boletos.html
+++ b/boletos.html
@@ -1,3 +1,10 @@
+<!-- 
+  Projeto: Leitura de Hidrômetro
+  Versão: v1.0.0
+  Data: 10/11/2025
+  Descrição: Página de geração e impressão de boletos.
+-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -13,24 +20,20 @@
 
   <header class="boletos-controls no-print">
     <button class="voltar" aria-label="Voltar para o bloco anterior" onclick="history.back()">← Voltar</button>
-
     <div class="ctrl-group">
       <label for="vencimento">Vencimento:</label>
       <input type="date" id="vencimento" />
     </div>
-
     <div class="ctrl-group">
       <label for="origem-dados">Origem:</label>
       <select id="origem-dados">
         <option value="atual">Leitura Atual</option>
       </select>
     </div>
-
     <div class="ctrl-group">
       <label for="filtro-responsavel">Filtrar por responsável (opcional):</label>
       <input type="text" id="filtro-responsavel" placeholder="Ex.: Ana" />
     </div>
-
     <button type="button" onclick="atualizarBoletos()">Atualizar</button>
     <button type="button" onclick="window.print()">🖨️ Imprimir</button>
   </header>
