--- a/bloco.html
+++ b/bloco.html
@@ -27,6 +27,8 @@
       <button type="button" class="btn-danger" onclick="resetarBlocoPerguntar()">🗑️ Resetar Bloco</button>
       <button type="button" onclick="(function(){ const id=new URLSearchParams(location.search).get('id'); location.href='boletos.html?id='+encodeURIComponent(id||'0'); })()">🧾 Boletos (imprimir)</button>
       <button type="button" class="btn-simular" onclick="abrirSimulador()">🧮 Simular Conta</button>
+      <button type="button" onclick="gerarExemploXLSX()">📘 Gerar Exemplo XLSX</button>
+
     </div>
   </div>
 
