--- a/bloco.html
+++ b/bloco.html
@@ -29,9 +29,37 @@
     </div>
   </div>
 
-  <main id="bloco-detalhes" class="conteudo"></main>
+  <main id="bloco-detalhes" class="conteudo">
+    <!-- Início da Calculadora de Conta de Água -->
+    <div class="calculator-container">
+      <h2>Calculadora de Conta de Água</h2>
+      <p>Preencha os campos abaixo para calcular o valor da sua conta.</p>
 
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+      <div class="input-group">
+        <label for="consumo">Consumo (m³):</label>
+        <input type="number" id="consumo" placeholder="Ex: 15" onchange="calcularValor()" />
+      </div>
+
+      <div class="input-group">
+        <label for="valorMinimo">Valor Mínimo (R$):</label>
+        <input type="number" id="valorMinimo" step="0.01" value="68.40" onchange="calcularValor()" />
+      </div>
+
+      <div class="input-group">
+        <label for="valorM3">Valor por m³ excedente (R$):</label>
+        <input type="number" id="valorM3" step="0.01" value="8.59" onchange="calcularValor()" />
+      </div>
+
+      <div class="input-group">
+        <label for="valorTotal">Total a pagar (R$):</label>
+        <input type="text" id="valorTotal" readonly />
+      </div>
+    </div>
+    <!-- Fim da Calculadora de Conta de Água -->
+
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
+
