--- a/bloco.html
+++ b/bloco.html
@@ -37,17 +37,17 @@
 
       <div class="input-group">
         <label for="consumo">Consumo (m³):</label>
-        <input type="number" id="consumo" placeholder="Ex: 15" onchange="calcularValor()" />
+        <input type="number" id="consumo" placeholder="Ex: 15" onchange="calcularValor(); atualizarTextoExplicativo();" />
       </div>
 
       <div class="input-group">
         <label for="valorMinimo">Valor Mínimo (R$):</label>
-        <input type="number" id="valorMinimo" step="0.01" value="68.40" onchange="calcularValor()" />
+        <input type="number" id="valorMinimo" step="0.01" value="68.40" onchange="calcularValor(); atualizarTextoExplicativo();" />
       </div>
 
       <div class="input-group">
         <label for="valorM3">Valor por m³ excedente (R$):</label>
-        <input type="number" id="valorM3" step="0.01" value="8.59" onchange="calcularValor()" />
+        <input type="number" id="valorM3" step="0.01" value="8.59" onchange="calcularValor(); atualizarTextoExplicativo();" />
       </div>
 
       <div class="input-group">
@@ -57,9 +57,12 @@
     </div>
     <!-- Fim da Calculadora de Conta de Água -->
 
+    <!-- Texto Explicativo -->
+    <div id="textoExplicativo" class="result-box">
+      <!-- O texto explicativo será atualizado aqui -->
+    </div>
   </main>
 
   <script src="script.js"></script>
 </body>
 </html>
-
