--- a/bloco.html
+++ b/bloco.html
@@ -61,6 +61,14 @@
     <div id="textoExplicativo" class="result-box">
       <!-- O texto explicativo será atualizado aqui -->
     </div>
+
+    <!-- Link para enviar o texto explicativo via WhatsApp -->
+    <div>
+      <a id="whatsappLink" href="#" target="_blank">
+        <button>Enviar cálculo via WhatsApp</button>
+      </a>
+    </div>
+
   </main>
 
   <script src="script.js"></script>
