--- a/dashboard.html
+++ b/dashboard.html
@@ -30,6 +30,7 @@
   </header>
 
   <main id="blocos-container"></main>
+  <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
